--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!doctype html>
+<html lang="ja">
 <head>
-    <title>あいしぃーのサイト</title>
+    <link rel=”stylesheet” href=”index.css”>
 </head>
+<header>
+    <meta charset="utf-8">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script>$(function(){$("header").load("header.html");});</script>
+    <title>あいしぃーのサイト</title>
+</header>
 <body>
-    <h1>Hi there!</h1>
+    <h1 class="title">Hi there!</h1>
+</body>
