--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <header>
     <meta charset="utf-8">
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script>$(function(){$("header").load("header.html");});</script>
+    <script>$(function(){$("header").load("head.html");});</script>
     <title>あいしぃーのサイト</title>
 </header>
 <body>
