phpって動くんかな

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
+<?php
+include('head.php');
+ob_start();
+?>
 <html lang="ja">
 <head>
     <link rel=”stylesheet” href=”index.css”>
 </head>
 <header>
+    <iframe src="head.html"></iframe>
     <meta charset="utf-8">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script>$(function(){$("header").load("head.html");});</script>
     <title>あいしぃーのサイト</title>
 </header>
 <body>
