--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!doctype html>
-<?php
-include('head.php');
-ob_start();
-?>
 <html lang="ja">
 <head>
-    <link rel=”stylesheet” href=”index.css”>
+    <link rel=”stylesheet” href=”/assets/index.css”>
 </head>
 <header>
-    <iframe src="head.html"></iframe>
+<div id="headers">
+    </div>
     <meta charset="utf-8">
     <title>あいしぃーのサイト</title>
 </header>
