--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
-    <link rel=”stylesheet” href=”/assets/index.css”>
+    <link rel=”stylesheet” href=”/assets/design.css”>
 </head>
 <header>
 <div id="headers">
