--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="ja">
 <head>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="/aseets/javascript.js"></script>
     <link rel=”stylesheet” href=”/assets/design.css”>
 </head>
 <header>
