--- a/head.html
+++ b/head.html
@@ -1,16 +1,9 @@
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="head.css">
-  </head>
 <header>
-    <h1 class="title">タイトル</h1>
+    <h1 class="title"><img src="/favicon.ico" class="siteicon">あいしぃーのじさくさいと</h1>
     <nav class="nav">
       <ul class="menu-group">
-        <li class="menu-item"><a href="#">項目1</a></li>
-        <li class="menu-item"><a href="#">項目2</a></li>
-        <li class="menu-item"><a href="#">項目3</a></li>
-        <li class="menu-item"><a href="#">項目4</a></li>
-        <li class="menu-item"><a href="#">項目5</a></li>
+        <li class="menu-item"><a href="/">とっぷ </a></li>
+        <li class="menu-item"><a href="/about-me.html">わいについて</a></li>
       </ul>
     </nav>
 </header>
