--- a/head.html
+++ b/head.html
@@ -1,9 +1,7 @@
-<header>
-    <h1 class="title"><img src="/favicon.ico" class="siteicon">あいしぃーのじさくさいと</h1>
+    <h1 class="title"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></h1>
     <nav class="nav">
       <ul class="menu-group">
         <li class="menu-item"><a href="/">とっぷ </a></li>
         <li class="menu-item"><a href="/about-me.html">わいについて</a></li>
       </ul>
     </nav>
-</header>
