--- a/head.html
+++ b/head.html
@@ -1,4 +1,5 @@
-    <h1 class="title"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></h1>
+<link rel="stylesheet" href="/aseets/design.css">
+<h1 class="title"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></h1>
     <nav class="nav">
       <ul class="menu-group">
         <li class="menu-item"><a href="/">とっぷ </a></li>
