--- a/head.html
+++ b/head.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/aseets/design.css">
+<link rel="stylesheet" href="/aseets/design.css?34423432">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 <h1 class="title"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></h1>
     <nav class="nav">
       <ul class="menu-group">
