--- a/head.html
+++ b/head.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/aseets/design.css?34423432">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-<h1 class="title"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></h1>
+<h1 class="title"><a href="/"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></a></h1>
     <nav class="nav">
       <ul class="menu-group">
         <li class="menu-item"><a href="/">とっぷ </a></li>
