--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="/aseets/javascript.js"></script>
+    <script src="/aseets/javascript.js?AAAAAAAN"></script>
     <link rel=”stylesheet” href=”/assets/design.css”>
 </head>
 <header>
