しゅまほたいおう

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="/aseets/javascript.js?AAAAAAAN"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 </head>
 <header>
 <div id="headers">
