レスポンシブ対応その2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="/aseets/javascript.js?AAAAAAAN"></script>
+    <script src="/aseets/javascript.js?3462"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 </head>
 <header>
