--- a/head.html
+++ b/head.html
@@ -1,12 +1,15 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <h1 class="title"><a href="/"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></a></h1>
-    <nav class="nav">
+<button class="nav-open mobileonly" onclick="nav_open();"><span class="material-symbols-outlined">
+  menu
+  </span></button>    
+<nav class="nav">
       <h1 class="title mobileonly"><a href="/"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></a></h1>
       <ul class="menu-group">
         <li class="menu-item"><a href="/">とっぷ </a></li>
         <li class="menu-item"><a href="/about-me.html">わいについて</a></li>
       </ul>
     </nav>
-    <button class="nav-close"><span class="material-symbols-outlined">
+    <button class="nav-close" onclick="nav_close();"><span class="material-symbols-outlined">
       close
       </span></button>
