レスポンシブ対応その3

--- a/head.html
+++ b/head.html
@@ -10,6 +10,6 @@
         <li class="menu-item"><a href="/about-me.html">わいについて</a></li>
       </ul>
     </nav>
-    <button class="nav-close" onclick="nav_close();"><span class="material-symbols-outlined">
+    <button class="nav-close mobileonly" onclick="nav_close();"><span class="material-symbols-outlined">
       close
       </span></button>
