--- a/about-me.html
+++ b/about-me.html
@@ -7,11 +7,17 @@
 </head>
 <header>
 <div id="headers">
-   <!-- ヘッダー読み込み -->
     </div>
     <meta charset="utf-8">
     <title>あいしぃーについて</title>
 </header>
 <body>
-   <!-- コンテンツ -->
+<div class="content">
+    <div class="profile-content">
+<div class="profile-box">
+    <h2>あいしぃーってだれ？</h2>
+    <p>変態です。</p>
+</div>
+    </div>
+</div>
 </body>
