表示高速化その1

--- a/head.html
+++ b/head.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<h1 class="title"><a href="/"><img src="/favicon.ico" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></a></h1>
+<h1 class="title"><a href="/"><img src="/favicon.ico" loading="lazy" class="siteicon"><span class="sitetitle">あいしぃーのじさくさいと</span></a></h1>
 <button class="nav-open mobileonly" onclick="nav_open();"><span class="material-symbols-outlined">
   menu
   </span></button>    
