--- a/about-me.html
+++ b/about-me.html
@@ -13,5 +13,6 @@
     <title>あいしぃーについて</title>
 </header>
 <body>
-   <!-- コンテンツ -->
+   <h1 class="title">あいしぃーとは</h1>
+   <span>よくわからないことを言っていたり、あほな人。<br>あいしぃーのサーバーの管理者であり、サイトの大部分を作ってもらっているりょうまのDiscordの友達であるでしょう。</span>
 </body>
