--- a/about-me.html
+++ b/about-me.html
@@ -16,7 +16,7 @@
     <div class="profile-content">
 <div class="profile-box">
     <h2>あいしぃーってだれ？</h2>
-    <p>変態です。</p>
+    <p>あほです。よくわかりません。<br>あいしぃーのさーばーの所有者。<br>いろんなサーバーの管理者もやっていたり、いなかったり<br>いろんなゲームしてます。好きなゲームはMinecraft。</p>
 </div>
     </div>
 </div>
